<resources>
    <string name="app_name" translatable="false">Aurora Alert</string>
    <string name="error_occurred">An error occurred</string>
    <string name="error_occurred_message">%s ran into an error. Please email the developer to get this issue fixed.</string>
    <string name="email_developer">Email developer</string>
    <string name="email" translatable="false">kylecorry31@gmail.com</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="space_weather_alert">Space Weather Alert</string>
    <string name="notify_kp_warnings">Notify Kp Warnings</string>
    <string name="pref_key_kp_warnings">pref_key_kp_warnings</string>
    <string name="pref_key_kp_alerts">pref_key_kp_alerts</string>
    <string name="pref_key_ef_warnings">pref_key_ef_warnings</string>
    <string name="pref_key_ef_alerts">pref_key_ef_alerts</string>
    <string name="pref_key_px_warnings">pref_key_px_warnings</string>
    <string name="pref_key_px_alerts">pref_key_px_alerts</string>
    <string name="pref_key_tp_warnings">pref_key_tp_warnings</string>
    <string name="pref_key_tp_alerts">pref_key_tp_alerts</string>
    <string name="pref_key_xm_warnings">pref_key_xm_warnings</string>
    <string name="pref_key_xm_alerts">pref_key_xm_alerts</string>
    <string name="pref_key_sud_warnings">pref_key_sud_warnings</string>
    <string name="pref_key_storm_watch">pref_key_storm_watch</string>
</resources>